--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>backbone</title>
+	<link rel="stylesheet" href="animate.css">
 	<link rel="stylesheet" href="style.css">
 	<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow:700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
+
 </head>
 <body>
 	<div class="bg">
@@ -25,9 +28,14 @@
 		</script>
 	</div>
 	</div>
+	<div class="arrow-down"></div>
+	<div class="arrow-back"></div>
+	<span class='back'>Back to the manager</span>
 	</div>
-	<div class="arrow"></div>
-	<h1 class="created">Created by <a href="#" class="link">WRQQQWQ</a></h1>
+
+	
+		<h1 class="animated created"><span class="created_by">Created by</span><a href="https://github.com/WRqw" class="link">@WRQQQWQ</a></h1>
+
 	
 	<script type="text/javascript" src = 'js/jquery-2.1.4.js'></script>
 	<script type="text/javascript" src = 'js/underscore.js'></script>
