background for elements in head

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="bg">
 	<div class="center-content">
-	<div class="black-bg"></div>
+	<div class="black-bg">
 	<h1 class="title">Your tasks:</h1>
 	<form action="" id="addTask">
 		<input type="text" id="editAdd" placeholder="Enter task name">
@@ -28,6 +28,8 @@
 		</script>
 	</div>
 	</div>
+	</div>
+
 	<div class="arrow-down"></div>
 	<div class="arrow-back"></div>
 	<span class='back'>Back to the manager</span>
